--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -23,16 +23,16 @@
       <section class="details">
         <table>
           <tr>
-            <td>Preparation</td>
-            <td>Cooking time</td>
-            <td>Spicy</td>
-            <td>Serves</td>
+            <td><p>Preparation</p></td>
+            <td><p>Cooking time</p></td>
+            <td><p>Spicy</p></td>
+            <td><p>Serves</p></td>
           </tr>
           <tr>
-            <td>45 min</td>
-            <td>60 min</td>
-            <td>Not spicy</td>
-            <td>4</td>
+            <td><p>45 min</p></td>
+            <td><p>60 min</p></td>
+            <td><p>Not spicy</p></td>
+            <td><p>4</p></td>
           </tr>
         </table>
       </section>
