--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -21,18 +21,18 @@
       <img src="images/butter-chicken.jpg" alt="" />
       <h1>Butter Chicken</h1>
       <section class="details">
-        <table>
+        <table style="font-size: 1rem">
           <tr>
-            <td><p>Preparation</p></td>
-            <td><p>Cooking time</p></td>
-            <td><p>Spicy</p></td>
-            <td><p>Serves</p></td>
+            <td>Preparation</td>
+            <td>Cooking time</td>
+            <td>Spicy</td>
+            <td>Serves</td>
           </tr>
           <tr>
-            <td><p>45 min</p></td>
-            <td><p>60 min</p></td>
-            <td><p>Not spicy</p></td>
-            <td><p>4</p></td>
+            <td>45 min</td>
+            <td>60 min</td>
+            <td>Not spicy</td>
+            <td>4</td>
           </tr>
         </table>
       </section>
