--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -21,12 +21,12 @@
       <img src="images/butter-chicken.jpg" alt="" />
       <h1>Butter Chicken</h1>
       <section class="details">
-        <table style="font-size: 1rem">
+        <table>
           <tr>
             <td>Preparation</td>
             <td>Cooking time</td>
             <td>Spicy</td>
-            <td>Serves</td>
+            <td style="width: 5rem">Serves</td>
           </tr>
           <tr>
             <td>45 min</td>
