--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -21,16 +21,34 @@
       <img src="images/butter-chicken.jpg" alt="" />
       <h1>Butter Chicken</h1>
       <section class="details">
-        <table>
+        <table class="hide-on-mobile">
           <tr>
             <td>Preparation</td>
             <td>Cooking time</td>
             <td>Spicy</td>
-            <td style="width: 5rem">Serves</td>
+            <td>Serves</td>
           </tr>
           <tr>
             <td>45 min</td>
             <td>60 min</td>
+            <td>Not spicy</td>
+            <td>4</td>
+          </tr>
+        </table>
+        <table class="show-on-mobile">
+          <tr>
+            <td>Preparation</td>
+            <td>Cooking time</td>
+          </tr>
+          <tr>
+            <td style="padding-bottom: 1rem">45 min</td>
+            <td style="padding-bottom: 1rem">60 min</td>
+          </tr>
+          <tr>
+            <td>Spicy</td>
+            <td>Serves</td>
+          </tr>
+          <tr>
             <td>Not spicy</td>
             <td>4</td>
           </tr>
