--- a/about-me.html
+++ b/about-me.html
@@ -10,6 +10,7 @@
       <nav>
         <div class="logo">
           <img src="images/logo.svg" alt="" />
+          <p>Soul Food for Every Mood</p>
           <p></p>
         </div>
         <ul>
@@ -20,11 +21,13 @@
     </header>
     <main>
       <section>
-        <h1>Soul Food for Every Mood</h1>
-        <h2>Recepies</h2>
-        <ul>
-          <li><a href="butter-chicken.html">Butter Chicken</a></li>
-        </ul>
+        <h1>Peggy Scholtes</h1>
+        <p>
+          🙋‍♀️ Peg, Spek, Pegster <br />
+          🍜 Incredibly passionate about all things food <br />
+          👩🏻‍🍳 Cooking is my remedy <br />
+          🍷 Never turning down a good glass of wine
+        </p>
       </section>
     </main>
     <footer>
