--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -13,14 +13,14 @@
           <p>Soul Food for Every Mood</p>
         </div>
         <ul>
+          <li><a href="about-me.html">About me</a></li>
           <li><a href="index.html">Recepies</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <img src="images/butter-chicken.jpg" alt="" />
-      <h1>Butter Chicken</h1>
-      <section class="details">
+      <section>
+        <h1>Butter Chicken</h1>
         <table class="hide-on-mobile">
           <tr>
             <td>Preparation</td>
@@ -53,9 +53,10 @@
             <td>4</td>
           </tr>
         </table>
+        <img src="images/butter-chicken.jpg" alt="" />
       </section>
-      <h2>Ingredients for the Chicken Marinade</h2>
       <section>
+        <h2>Ingredients for the Chicken Marinade</h2>
         <table>
           <tr>
             <td style="width: 4rem">500g</td>
@@ -95,8 +96,8 @@
           </tr>
         </table>
       </section>
-      <h2>Chicken marinate</h2>
       <section>
+        <h2>Chicken marinate</h2>
         <ul>
           <li>
             Add the chicken thighs, spices, yoghurt and lemon juice in a bowl
@@ -107,8 +108,8 @@
           </li>
         </ul>
       </section>
-      <h2>Ingredients Butter Chicken base</h2>
       <section>
+        <h2>Ingredients Butter Chicken base</h2>
         <table>
           <tr>
             <td style="width: 4rem">125g</td>
@@ -196,8 +197,8 @@
           </tr>
         </table>
       </section>
-      <h2>Butter Chicken</h2>
       <section>
+        <h2>Butter Chicken</h2>
         <ul>
           <li>Melt the butter in a big pan on medium heat.</li>
           <li>Add cumin seeds to the butter and fry until it get fragrant.</li>
