--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -22,7 +22,7 @@
       <section>
         <h1>Butter Chicken</h1>
         <table class="hide-on-mobile">
-          <tr>
+          <tr class="gray">
             <td>Preparation</td>
             <td>Cooking time</td>
             <td>Spicy</td>
@@ -36,15 +36,15 @@
           </tr>
         </table>
         <table class="show-on-mobile">
-          <tr>
+          <tr class="gray">
             <td>Preparation</td>
             <td>Cooking time</td>
           </tr>
           <tr>
-            <td style="padding-bottom: 1rem">45 min</td>
-            <td style="padding-bottom: 1rem">60 min</td>
+            <td>45 min</td>
+            <td>60 min</td>
           </tr>
-          <tr>
+          <tr class="gray">
             <td>Spicy</td>
             <td>Serves</td>
           </tr>
