--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -14,7 +14,7 @@
         </div>
         <ul>
           <li><a href="about-me.html">About me</a></li>
-          <li><a href="index.html">Recepies</a></li>
+          <li><a href="index.html">Recipes</a></li>
         </ul>
       </nav>
     </header>
