--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         </div>
         <ul>
           <li><a href="about-me.html">About me</a></li>
-          <li><a href="index.html">Recepies</a></li>
+          <li><a href="index.html">Recipes</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
         <h1>Soul Food for Every Mood</h1>
-        <h2>Recepies</h2>
+        <h2>Recipes</h2>
         <ul>
           <li><a href="butter-chicken.html">Butter Chicken</a></li>
         </ul>
