--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -24,7 +24,7 @@
         <table class="hide-on-mobile">
           <tr class="gray">
             <td>Preparation</td>
-            <td>Cooking time</td>
+            <td>Cook</td>
             <td>Spicy</td>
             <td>Serves</td>
           </tr>
@@ -38,7 +38,7 @@
         <table class="show-on-mobile">
           <tr class="gray">
             <td>Preparation</td>
-            <td>Cooking time</td>
+            <td>Cook</td>
           </tr>
           <tr>
             <td>45 min</td>
@@ -59,7 +59,7 @@
         <h2>Ingredients for the Chicken Marinade</h2>
         <table>
           <tr>
-            <td style="width: 4rem">500g</td>
+            <td style="width: 5rem">500g</td>
             <td>Chicken Thighs, cut in pieces</td>
           </tr>
           <tr>
@@ -98,7 +98,7 @@
       </section>
       <section>
         <h2>Chicken marinate</h2>
-        <ul>
+        <ol>
           <li>
             Add the chicken thighs, spices, yoghurt and lemon juice in a bowl
           </li>
@@ -106,13 +106,13 @@
             Cover the bowl. Let the chicken marinate in the fridge for at least
             2 hours (overnight would be even better!)
           </li>
-        </ul>
+        </ol>
       </section>
       <section>
-        <h2>Ingredients Butter Chicken base</h2>
+        <h2>Ingredients for the Butter Chicken base</h2>
         <table>
           <tr>
-            <td style="width: 4rem">125g</td>
+            <td style="width: 5rem">125g</td>
             <td>Butter</td>
           </tr>
           <tr>
@@ -199,7 +199,7 @@
       </section>
       <section>
         <h2>Butter Chicken</h2>
-        <ul>
+        <ol>
           <li>Melt the butter in a big pan on medium heat.</li>
           <li>Add cumin seeds to the butter and fry until it get fragrant.</li>
           <li>
@@ -239,7 +239,7 @@
             Top it all off with cilantro. Serve the butter chicken with naan or
             white rice.
           </li>
-        </ul>
+        </ol>
       </section>
     </main>
     <footer>
