--- a/butter-chicken.html
+++ b/butter-chicken.html
@@ -41,8 +41,8 @@
             <td>Cook</td>
           </tr>
           <tr>
-            <td>45 min</td>
-            <td>60 min</td>
+            <td style="padding-bottom: 1rem">45 min</td>
+            <td style="padding-bottom: 1rem">60 min</td>
           </tr>
           <tr class="gray">
             <td>Spicy</td>
