--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <div class="logo">
           <img src="images/logo.svg" alt="" />
-          <p></p>
+          <p>Soul Food for Every Mood</p>
         </div>
         <ul>
           <li><a href="about-me.html">About me</a></li>
@@ -20,8 +20,7 @@
     </header>
     <main>
       <section>
-        <h1>Soul Food for Every Mood</h1>
-        <h2>Recipes</h2>
+        <h1>Recipes</h1>
         <ul>
           <li><a href="butter-chicken.html">Butter Chicken</a></li>
         </ul>
