--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <section>
         <h1>Recipes</h1>
         <ul>
-          <li><a href="butter-chicken.html">Butter Chicken</a></li>
+          <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
+          <li><a href="recipes/pasta-red-pesto.html">Pasta Red Pesto</a></li>
         </ul>
       </section>
     </main>
