--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
         <ul>
           <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
           <li><a href="recipes/pasta-red-pesto.html">Pasta Red Pesto</a></li>
+          <li>
+            <a href="recipes/risotto-broccoli-bacon.html"
+              >Risotto with Broccoli and Bacon</a
+            >
+          </li>
         </ul>
       </section>
     </main>
