--- a/index.html
+++ b/index.html
@@ -22,11 +22,21 @@
       <section>
         <h1>Recipes</h1>
         <ul>
+          <li>
+            <a href="recipes/bao-buns.html"
+              >Bao Buns with Sticky Hoisin Chicken</a
+            >
+          </li>
           <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
           <li><a href="recipes/pasta-red-pesto.html">Pasta Red Pesto</a></li>
           <li>
             <a href="recipes/risotto-broccoli-bacon.html"
               >Risotto with Broccoli and Bacon</a
+            >
+          </li>
+          <li>
+            <a href="recipes/thai-beef-massaman-curry.html"
+              >Thai Beef Massaman Curry</a
             >
           </li>
         </ul>
