--- a/index.html
+++ b/index.html
@@ -21,25 +21,28 @@
     <main>
       <section>
         <h1>Recipes</h1>
-        <ul>
-          <li>
-            <a href="recipes/bao-buns.html"
-              >Bao Buns with Sticky Hoisin Chicken</a
-            >
-          </li>
-          <li><a href="recipes/butter-chicken.html">Butter Chicken</a></li>
-          <li><a href="recipes/pasta-red-pesto.html">Pasta Red Pesto</a></li>
-          <li>
-            <a href="recipes/risotto-broccoli-bacon.html"
-              >Risotto with Broccoli and Bacon</a
-            >
-          </li>
-          <li>
-            <a href="recipes/thai-beef-massaman-curry.html"
-              >Thai Beef Massaman Curry</a
-            >
-          </li>
-        </ul>
+        <div class="recipes">
+          <a class="recipe" href="recipes/bao-buns.html">
+            <img src="images/bao-buns.jpg" alt="" />
+            Bao Buns with Sticky Hoisin Chicken
+          </a>
+          <a class="recipe" href="recipes/butter-chicken.html">
+            <img src="images/butter-chicken.jpg" alt="" />
+            Butter Chicken
+          </a>
+          <a class="recipe" href="recipes/pasta-red-pesto.html">
+            <img src="images/pasta-red-pesto.jpg" alt="" />
+            Pasta Red Pesto
+          </a>
+          <a class="recipe" href="recipes/risotto-broccoli-bacon.html">
+            <img src="images/risotto-broccoli-bacon.jpg" alt="" />
+            Risotto with Broccoli and Bacon
+          </a>
+          <a class="recipe" href="recipes/thai-beef-massaman-curry.html">
+            <img src="images/thai-beef-massaman-curry.jpg" alt="" />
+            Thai Beef Massaman Curry
+          </a>
+        </div>
       </section>
     </main>
     <footer>
