--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="images/icon.png" sizes="48x48" />
     <link rel="stylesheet" href="style.css" />
     <title>Soul Food for Every Mood</title>
   </head>
