--- a/recipes/bao-buns.html
+++ b/recipes/bao-buns.html
@@ -24,38 +24,24 @@
     <main>
       <section>
         <h1>Bao Buns with Sticky Hoisin Chicken</h1>
-        <table class="hide-on-mobile">
-          <tr class="gray">
-            <td>Preparation</td>
-            <td>Cook</td>
-            <td>Spicy</td>
-            <td>Serves</td>
-          </tr>
-          <tr>
-            <td>45 min</td>
-            <td>60 min</td>
-            <td>Not spicy</td>
-            <td>4</td>
-          </tr>
-        </table>
-        <table class="show-on-mobile">
-          <tr class="gray">
-            <td>Preparation</td>
-            <td>Cook</td>
-          </tr>
-          <tr>
-            <td style="padding-bottom: 1rem">45 min</td>
-            <td style="padding-bottom: 1rem">60 min</td>
-          </tr>
-          <tr class="gray">
-            <td>Spicy</td>
-            <td>Serves</td>
-          </tr>
-          <tr>
-            <td>Not spicy</td>
-            <td>4</td>
-          </tr>
-        </table>
+        <div class="recipe-details">
+          <div>
+            <p class="gray">Preparation</p>
+            45 min
+          </div>
+          <div>
+            <p class="gray">Cook</p>
+            60 min
+          </div>
+          <div>
+            <p class="gray">Spicy</p>
+            Not spicy
+          </div>
+          <div>
+            <p class="gray">Serves</p>
+            4
+          </div>
+        </div>
         <img src="../images/bao-buns.jpg" alt="" />
       </section>
       <section>
